--- a/.github/workflows/auto-push.yml
+++ b/.github/workflows/auto-push.yml
@@ -13,10 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Git
+        run: |
+          git config --global user.email "handmadejewellery2003@gmail.com"
+          git config --global user.name "handmadejewellery"
+
       - name: Auto Commit and Push
         run: |
-          git config --global user.email "your-email@example.com"
-          git config --global user.name "Your Name"
           git add .
-          git commit -m "Auto-update"
-          git push origin main
+          git commit -m "Auto-update" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/handmadejewellery/handmadejewellery.git main
