--- a/.github/workflows/auto-push.yml
+++ b/.github/workflows/auto-push.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch full history to prevent push issues
 
       - name: Set up Git
         run: |
@@ -22,4 +24,4 @@ jobs:
         run: |
           git add .
           git commit -m "Auto-update" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/handmadejewellery/handmadejewellery.git main
+          git push origin main
